<resources>

    <string name="app_name">Architect</string>

    <string name="connection_error">Connection error</string>
    <string name="unknown_error">Unknown error</string>

    <string name="psthv_email" translatable="false">alexey.psthv@gmail.com</string>
    <string name="ok" translatable="false">OK</string>

    <string name="city">City</string>
    <string name="location">Location</string>
    <string name="specialization">Specialization</string>
    <string name="check_update">Check update</string>
    <string name="data_loading">Data loading</string>
    <string name="preparation_for_launch">Launch preparation</string>
    <string name="search_architect">Search architect</string>
    <string name="name">Name</string>
    <string name="nothing_found">Nothing found</string>
    <string name="try_again">Try again</string>
    <string name="loading_error_text">An error occurred while loading data</string>
    <string name="if_you_want_change_data">If you have any questions / suggestions or want to add / change / delete data - please contact:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="wrong_login_or_password">Wrong login or password</string>
    <string name="sign_in">Sign in</string>
    <string name="start_typing_search_query">Start typing search query</string>

</resources>