<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.corner.searcharchitect.ui.login.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_400">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_margin_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_margin_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="30dp" />

        <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wrong_login_or_password"
            android:textColor="@color/red_500"
            android:textSize="16sp"
            app:invisibleIfFalse="@{vm.isErrorVisibility}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/content_margin_end"
            app:layout_constraintStart_toStartOf="@id/content_margin_start"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/username_edittext"
            style="@style/CommonEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/username"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:paddingEnd="44dp"
            android:text="@={vm.username}"
            app:layout_constraintEnd_toEndOf="@id/content_margin_end"
            app:layout_constraintStart_toStartOf="@id/content_margin_start"
            app:layout_constraintTop_toBottomOf="@id/error_text"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(v) -> vm.onClickClearUsername()}"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_clear_24"
            app:goneIfFalse="@{vm.isUsernameClearButtonVisibility}"
            app:layout_constraintBottom_toBottomOf="@id/username_edittext"
            app:layout_constraintEnd_toEndOf="@id/content_margin_end"
            app:layout_constraintTop_toTopOf="@id/username_edittext" />

        <EditText
            android:id="@+id/password_edittext"
            style="@style/CommonEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:paddingEnd="44dp"
            android:text="@={vm.password}"
            app:layout_constraintEnd_toEndOf="@id/content_margin_end"
            app:layout_constraintStart_toStartOf="@id/content_margin_start"
            app:layout_constraintTop_toBottomOf="@id/username_edittext"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(v) -> vm.onClickClearPassword()}"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_clear_24"
            app:goneIfFalse="@{vm.isPasswordClearButtonVisibility}"
            app:layout_constraintBottom_toBottomOf="@id/password_edittext"
            app:layout_constraintEnd_toEndOf="@id/content_margin_end"
            app:layout_constraintTop_toTopOf="@id/password_edittext" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:enabled="@{vm.isSignInButtonEnabled}"
            android:backgroundTint="@color/white"
            android:onClick="@{(v) -> vm.onClickSignIn()}"
            android:text="@string/sign_in"
            android:textColor="@color/blue_500"
            app:layout_constraintEnd_toEndOf="@id/content_margin_end"
            app:layout_constraintStart_toStartOf="@id/content_margin_start"
            app:layout_constraintTop_toBottomOf="@id/password_edittext" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>