<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.cornerarchitect.ui.search.SearchViewModel" />

        <variable
            name="rvConfig"
            type="com.example.cornerarchitect.utility.databinding.DataBindingRecyclerViewConfig" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_margin_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="15dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_margin_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="15dp" />

        <ImageView
            android:id="@+id/info_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_baseline_info_32"
            app:layout_constraintStart_toStartOf="@id/content_margin_start"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/info_icon" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/search_architect"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@id/content_margin_end"
            app:layout_constraintStart_toStartOf="@id/content_margin_start"
            app:layout_constraintTop_toBottomOf="@id/info_icon" />

        <ImageView
            android:id="@+id/city_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_baseline_location_city_24"
            app:layout_constraintStart_toStartOf="@id/content_margin_start"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="@string/city"
            android:paddingEnd="44dp"
            android:text="@={vm.city}"
            app:layout_constraintBottom_toBottomOf="@id/city_icon"
            app:layout_constraintEnd_toEndOf="@id/content_margin_end"
            app:layout_constraintStart_toEndOf="@id/city_icon"
            app:layout_constraintTop_toTopOf="@id/city_icon"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(v) -> vm.onClickClearCity()}"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_clear_24"
            app:goneIfFalse="@{vm.isCityClearButtonVisibility}"
            app:layout_constraintBottom_toBottomOf="@id/city_icon"
            app:layout_constraintEnd_toEndOf="@id/content_margin_end"
            app:layout_constraintTop_toTopOf="@id/city_icon"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/specialization_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_baseline_work_24"
            app:layout_constraintStart_toStartOf="@id/content_margin_start"
            app:layout_constraintTop_toBottomOf="@id/city_icon" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="@string/specialization"
            android:paddingEnd="44dp"
            android:text="@={vm.specialization}"
            app:layout_constraintBottom_toBottomOf="@id/specialization_icon"
            app:layout_constraintEnd_toEndOf="@id/content_margin_end"
            app:layout_constraintStart_toEndOf="@id/specialization_icon"
            app:layout_constraintTop_toTopOf="@id/specialization_icon"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(v) -> vm.onClickClearSpecialization()}"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_clear_24"
            app:goneIfFalse="@{vm.isSpecializationClearButtonVisibility}"
            app:layout_constraintBottom_toBottomOf="@id/specialization_icon"
            app:layout_constraintEnd_toEndOf="@id/content_margin_end"
            app:layout_constraintTop_toTopOf="@id/specialization_icon" />

        <ImageView
            android:id="@+id/name_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_baseline_person_24"
            app:layout_constraintStart_toStartOf="@id/content_margin_start"
            app:layout_constraintTop_toBottomOf="@id/specialization_icon" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="@string/name"
            android:paddingEnd="44dp"
            android:text="@={vm.name}"
            app:layout_constraintBottom_toBottomOf="@id/name_icon"
            app:layout_constraintEnd_toEndOf="@id/content_margin_end"
            app:layout_constraintStart_toEndOf="@id/name_icon"
            app:layout_constraintTop_toTopOf="@id/name_icon"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(v) -> vm.onClickClearName()}"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_clear_24"
            app:goneIfFalse="@{vm.isNameClearButtonVisibility}"
            app:layout_constraintBottom_toBottomOf="@id/name_icon"
            app:layout_constraintEnd_toEndOf="@id/content_margin_end"
            app:layout_constraintTop_toTopOf="@id/name_icon" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_icon"
            app:rvConfig="@{rvConfig}"
            app:rvItems="@{vm.searchItems}"
            tools:listitem="@layout/item_search"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>